Validaciones y mejora en la consistencia de datos
