# docs/swagger.json
@@ -286,12 +286,17 @@
         },
         "requests.OrderCreate": {
             "type": "object",
+            "required": [
+                "customer_name",
+                "items"
+            ],
             "properties": {
                 "customer_name": {
                     "type": "string"
                 },
                 "items": {
                     "type": "array",
+                    "minItems": 1,
                     "items": {
                         "$ref": "#/definitions/requests.OrderItemCreate"
                     }
@@ -300,6 +305,10 @@
         },
         "requests.OrderItemCreate": {
             "type": "object",
+            "required": [
+                "product_id",
+                "quantity"
+            ],
             "properties": {
                 "product_id": {
                     "type": "integer"
@@ -311,6 +320,9 @@
         },
         "requests.ProductStock": {
             "type": "object",
+            "required": [
+                "new_stock"
+            ],
             "properties": {
                 "new_stock": {
                     "type": "integer"
