# internal/core/dto/requests/product_stock.go
@@ -1,5 +1,5 @@
 package requests
 
 type ProductStock struct {
-	NewStock int `json:"new_stock"`
+	NewStock int `json:"new_stock" validate:"required,gt=0"`
 }
